# SmallGameLibrary

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CODING_STYLE.md  Doxyfile  MAINPAGE.md  README.md  ROADMAP.md
.github/: FUNDING.yml
.github/workflows/: documentation.yml  main.yml
documentation/: README.md
examples/Basic/: CMakeLists.txt  README.md
examples/Basic/include/: MyScene.hpp
examples/Basic/source/: MyScene.cpp  main.cpp
examples/Disney/: .gitignore  CMakeLists.txt
examples/Disney/assets/: Abu.toml  Items.toml  Pot.toml  Vendor.toml
examples/Disney/include/: Game.hpp  Menu.hpp  Quit.hpp
examples/Disney/source/: Game.cpp  Menu.cpp  Quit.cpp  main.cpp
examples/Planet/: CMakeLists.txt
examples/Planet/assets/: shader.frag  shader.vert
examples/Planet/include/: Icosahedron.h  MyScene.hpp
examples/Planet/source/: Icosahedron.cpp  MyScene.cpp  main.cpp
examples/Scripting/: CMakeLists.txt  README.md
examples/Scripting/assets/compiled/: main.arkc  scene.arkc
examples/Scripting/assets/lib/: Exceptions.ark  Functional.ark  List.ark  Math.ark  Range.ark  String.ark  Switch.ark
examples/Scripting/assets/lib/Functional/: Compose.ark  Drop.ark  DropWhile.ark  Flip.ark  Functional.ark  Map.ark  TakeWhile.ark  Unzip.ark  Zip.ark
examples/Scripting/assets/lib/Math/: Abs.ark  Even.ark  Max.ark  Min.ark  Odd.ark
examples/Scripting/assets/scripts/: main.ark  scene.ark
examples/Scripting/include/: MyScene.hpp
examples/Scripting/source/: MyScene.cpp  main.cpp
examples/Tilemap/: CMakeLists.txt  README.md
examples/Tilemap/include/: MyScene.hpp
examples/Tilemap/source/: MyScene.cpp  main.cpp
examples/View/: CMakeLists.txt  README.md
examples/View/include/: Bis.hpp  MyScene.hpp
examples/View/source/: Bis.cpp  MyScene.cpp  main.cpp
examples/Widgets/: CMakeLists.txt  README.md
examples/Widgets/include/: MyScene.hpp
examples/Widgets/source/: MyScene.cpp  main.cpp
include/Small/: All.hpp  Core.hpp  GameObjects.hpp  Graphics.hpp  Platform.hpp  Scenes.hpp  Scripting.hpp  SharedLibrary.hpp  System.hpp  Widgets.hpp
include/Small/Core/: Application.hpp  Application.inl  Scene.hpp  Scene.inl  SceneManager.hpp  SceneManager.inl
include/Small/Debug/: Profiler.hpp
include/Small/GameObjects/: Actor.hpp  Manager.hpp  Manager.inl
include/Small/GameObjects/Triggers/: Manager.hpp  Trigger.hpp  Update.hpp
include/Small/Graphics/: Animation.hpp  Node.hpp  TileView.hpp  Tilemap.hpp  Tilemap.inl
include/Small/Scenes/: ArkScene.hpp  Zone.hpp
include/Small/Scripting/: ArkScene.hpp  Bindings.hpp  Config.hpp  Engine.hpp  SFMLtoArk.hpp
include/Small/System/: FileSystem.hpp  Platform.hpp  SharedLibrary.hpp  TOML.hpp
include/Small/Widgets/: Base.hpp  Button.hpp  CheckBox.hpp  Image.hpp  Label.hpp  Layout.hpp  TextBox.hpp
source/: SharedLibrary.cpp
source/Core/: Application.cpp  Scene.cpp  SceneManager.cpp
source/GameObjects/: Actor.cpp
source/GameObjects/Triggers/: Manager.cpp  Trigger.cpp  Update.cpp
source/Graphics/: Animation.cpp  Node.cpp  TileView.cpp  Tilemap.cpp
source/Scenes/: ArkScene.cpp  Zone.cpp
source/Scripting/: ArkScene.cpp  Bindings.cpp  Engine.cpp  SFMLtoArk.cpp
source/System/: FileSystem.cpp  SharedLibrary.cpp
source/Widgets/: Base.cpp  Button.cpp  Image.cpp  Label.cpp  Layout.cpp
tools/: AnimationMaker.py
